hphp/hack/test/typecheck/as_expression/softtype.php.exp
File "softtype.php", line 6, characters 13-16:
Soft typehints cannot be used with as-expressions (Parsing[1002])
